ADD: pushed new nb, formatting to be done

--- a/Notebook/01-MedicationPrediction-ls-v02.ipynb
+++ b/Notebook/01-MedicationPrediction-ls-v02.ipynb
@@ -1252,7 +1252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "format_data = meta#[['npi','nppes_provider_gender', 'nppes_provider_state', 'nppes_credentials', 'specialty_description']]"
+    "format_data = meta[['npi','nppes_provider_gender', 'nppes_provider_state', 'nppes_credentials', 'specialty_description']]"
    ]
   },
   {
