UPDATE: Fully Formatted

--- a/Notebook/00-Extract-Data-v0.0.ipynb
+++ b/Notebook/00-Extract-Data-v0.0.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "#Set the amount of data you want to extract\n",
     "row_number = 100000\n",
-    "num_drugs = 300"
+    "num_drugs = 600"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "#get the most prescribed drugs and return a sample from that list\n",
     "drug_list = prescriber_info['drug_name'].value_counts(900).keys()#get a list of all drug names in order and select the top 500\n",
-    "drug_list = random.sample(list(set(drug_list)),600)#take a random unique sample of 300\n",
+    "drug_list = random.sample(list(set(drug_list)), num_drugs)#take a random unique sample of 300\n",
     "drug = pd.DataFrame(drug_list, columns=['drug_name']) #make the list into a dataframe"
    ]
   },
